mobile picture align center

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         <button class="cus--btn ml-md-4">START NOW FOR FREE</button>
                     </div>
                 </div>
-                <div class="col-md-6 cus--mobil d-flex justify-content-center">
+                <div class="col-md-6 cus--mobil d-flex justify-content-center align-items-center">
                     <img class="cus--mobil-img1" src="./img/phone.png" alt="Mobil kép">
                     <img class="cus--mobil-img2" src="./img/demo-screen-1.jpg" alt="">
                 </div>
@@ -91,7 +91,7 @@
             <div class="cus--unlimited-br"></div>
         </div>
         <div class="row mt-5">
-            <div class="col-md-4 cus--mobil d-flex justify-content-center mt-5 mb-5">
+            <div class="col-md-4 cus--mobil d-flex justify-content-center align-items-center mt-5 mb-5">
                 <img class="cus--mobil-img1" src="./img/phone.png" alt="">
                 <img class="cus--mobil-img2" src="./img/demo-screen-1.jpg" alt="">
             </div>
